maze.lessons.maze.island.IslandMaze.scala.error
Escaper:8: error: not found: value stFaceMur
      if (!stFaceMur()) {
           ^Escaper:36: warning: enclosing method murGauche has result type Unit: return value discarded
  return res
  ^